<resources>
    <string name="app_name">ColoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monto_inicial">Monto Inicial</string>
    <string name="reload">Reload</string>
    <string name="formulario">Formulario</string>
    <string name="resultado">Resultado</string>
    <string name="activo">Activo</string>
    <string name="datos">Datos</string>
    <string name="textview">TextView</string>
    <string name="horario">Horario</string>
    <string name="calendario">Calendario</string>
    <string name="nuevo">Nuevo</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="historial">Historial</string>
    <string name="ajustes">Ajustes</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="datePicker">Seleccione Fechas</string>
</resources>